pybamview.css
.outer {
  width: 100%;
}

.inner {
  position: relative;
  max-width: 940px;
  padding: 10px 10px;
  margin: 0;
}

#header_wrap {
  background: #212121;
  background: -moz-linear-gradient(top, #373737, #212121);
  background: -webkit-linear-gradient(top, #373737, #212121);
  background: -ms-linear-gradient(top, #373737, #212121);
  background: -o-linear-gradient(top, #373737, #212121);
  background: linear-gradient(top, #373737, #212121);
}

#toolbar {
  background: #BCB9B9;
}

#display_info {
  margin: 0;
  color: #fff;
  font-size: 30px;
  font-weight: 700;
  text-shadow: #111 0px 0px 10px;
}

#param_info {
  margin: 0;
  color: #fff;
  font-size: 20px;
  font-weight: 700;
  text-shadow: #111 0px 0px 10px;
}

#footer_wrap {
  background: #212121;
}

#footer_info {
  margin: 0;
  color: #fff;
  font-size: 12px;
  font-weight: 700;
  text-shadow: #111 0px 0px 10px;
}

